<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/PadMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"  >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >
            
			<Button
			    android:id="@+id/btnPrevious"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/ic_action_previous_item" />

            <TextView
                android:id="@+id/txtDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
	        <Button
	            android:id="@+id/btnNext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/ic_action_next_item" />
	        
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnBreakfast"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLunch"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnDinner"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

	<TableLayout
	    android:id="@+id/Table"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.89" >

	    <TableRow 
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <ImageView
	            android:id="@+id/imgItem1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/entree1" />
	
	        <TextView
	            android:id="@+id/txtEnt1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:paddingLeft="10dp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <ImageView
	            android:id="@+id/imgItem2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/entree2" />
	
	        <TextView
	            android:id="@+id/txtEnt2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:paddingLeft="10dp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <ImageView
	            android:id="@+id/imgItem3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/side" />
	
	        <TextView
	            android:id="@+id/txtSide"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:paddingLeft="10dp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <ImageView
	            android:id="@+id/imgItem4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/vegetable1" />
	
	        <TextView
	            android:id="@+id/txtVeg1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:paddingLeft="10dp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <ImageView
	            android:id="@+id/imgItem5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/vegetable2" />
	
	        <TextView
	            android:id="@+id/txtVeg2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:paddingLeft="10dp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"  >
	
	        <ImageView
	            android:id="@+id/imgItem6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:contentDescription="@string/bread" />
	
	        <TextView
	            android:id="@+id/txtBread"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="10dp"
	            android:layout_gravity="center_vertical" />
	
	    </TableRow>
	
		</TableLayout>
</LinearLayout>